# CIneForge

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
API/: BACKEND_API_FLOW.md
Architecture/: ARCHITECTURE_BLUEPRINT.md
Benchmarks/: BENCHMARK_PROTOCOL.md
ComfyUI/: HEADLESS_COMFYUI_API.md
Database/: JSON_SCHEMAS.md  POSTGRES_SCHEMA.sql
Elite/: ELITE_ARCHITECTURE.md
FFmpeg/: FFMPEG_STRATEGY_COMMAND_LIBRARY.md
Findings/: FINAL_RECOMMENDATION.md
LoRAs/: LORA_COMPATIBILITY_MATRIX.md
MVP/: MVP_ARCHITECTURE.md
Models/: MODEL_FEASIBILITY_MATRIX.md
Orchestration/: AUTONOMOUS_PRODUCTION_ARCHITECTURE.md  OPTIONAL_AI_ORCHESTRATION_LAYER.md
Quantization/: QUANTIZATION_MATRIX.md
Risk-Register/: RISK_REGISTER.md
Runtime/: RUNTIME_ISOLATION_AND_QUEUEING.md
Sources/: SOURCE_REGISTER.md
Workflows/: WORKFLOW_JSON_MUTATION_STRATEGY.md
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: test_ai_proposal_validator.py  test_benchmark_services.py  test_db_schema.py  (+16 more)
docs/: API_CONTRACT.md  ARCHITECTURE_RECONCILIATION_REPORT.md  IMPLEMENTATION_DRIFT_REPORT.md  IMPLEMENTATION_NOTES.md  LOCAL_SMOKE_TEST_PLAN.md  POSTGRES_VERIFICATION.md  PUBLIC_REPO_STATUS.md  QUEUE_STATE_MACHINE.md  RESEARCH_TRACEABILITY.md  SPRINT_1A_CORRECTION_PLAN.md  SPRINT_1A_STATUS.md  SPRINT_1B_CLOSEOUT.md  SPRINT_1B_PLAN.md  SPRINT_1C_PLAN.md  UI_MVP_STATUS.md  WORKFLOW_TEMPLATE_MANIFEST.md
frontend/: .env.example  README.md  index.html  package-lock.json
scripts/: create_db.py
(+67 files in other folders)
